[gd_scene load_steps=3 format=3 uid="uid://b87rcl12j1grt"]

[ext_resource type="Script" uid="uid://bcydlm03wa7jv" path="res://Scripts/interacting_component.gd" id="1_bqt4w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d83uc"]
radius = 50.0

[node name="InteractingComponent" type="Node2D"]
script = ExtResource("1_bqt4w")

[node name="InteractRange" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractRange"]
shape = SubResource("CircleShape2D_d83uc")

[node name="InteractLabel" type="Label" parent="InteractRange"]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="area_entered" from="InteractRange" to="." method="_on_interact_range_area_entered"]
[connection signal="area_exited" from="InteractRange" to="." method="_on_interact_range_area_exited"]
